Resolved logout and user name

--- a/project/LaborGuru_SPM_API/trunk/web/index.html
+++ b/project/LaborGuru_SPM_API/trunk/web/index.html
@@ -40,28 +40,17 @@
                     <li class="xn-openable">
                         <a href="#"><span class="fa fa-building-o"></span> <span class="xn-text">Customers</span></a>
                     </li>
+                    <li class="xn-openable">
+                        <a href="#"><span class="fa fa-building-o"></span> <span class="xn-text">Customers</span></a>
+                    </li>
 
 
                     <!-- End Menues -->
-                    <!-- DROP DOWN -->
-                    <li class="xn-text  pull-right">
-                          <a href="#" class="dropdown-toggle" data-toggle="dropdown">User<span class="fa fa-angle-down"></span></a>
-                          <ul class="dropdown-menu">
-                            <li><a href="#" class="panel-collapse"><span class="fa fa-cog"></span> Profile</a></li>
-                            <li><a href="#" class="panel-collapse"><span class="fa fa-sign-out"></span> Sign Out</a></li>
-                          </ul>
-                      <!-- </li> -->
-                      <!-- <ul class="panel-controls" style="margin-top: 2px;">
-                        <li class="dropdown">
-                           <ul class="dropdown" style="margin-top: 2px;">
-                              <a href="#" class="dropdown-toggle" data-toggle="dropdown">User<span class="fa fa-angle-down"></span></a>
-                              <li><a href="#" class="panel-collapse"><span class="fa fa-cog"></span> Profile</a></li>
-                              <li><a href="#" class="panel-collapse"><span class="fa fa-sign-out"></span> Sign Out</a></li>
-                          </ul>
-                        </li>
-                      </ul> -->
+                    <!-- SIGN OUT -->
+                    <li class="xn-openable pull-right">
+                        <a href="#" class="mb-control" data-box="#mb-signout">USER&nbsp;<span class="fa fa-sign-out"></span></a>
                     </li>
-                    <!-- END DROP DOWN -->
+                    <!-- END SIGN OUT -->
 
                     <!-- MESSAGES -->
                     <!-- <li class="xn-icon-button pull-right">
