--- a/web/app/home/home.html
+++ b/web/app/home/home.html
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <div class="col-md-12" ng-controller="HomeCtrl">
+  <script type="text/javascript" src="theme/js/demo_dashboard.js"></script>
   <!-- PAGE CONTENT WRAPPER -->
   <div class="page-content-wrap">
     <!-- START WIDGETS -->
@@ -480,8 +481,3 @@
                                         <!-- END DASHBOARD CHART -->
                                       </div>
                                       <!-- END PAGE CONTENT WRAPPER -->
-                                    </div>
-                                    <!-- END PAGE CONTENT -->
-                                  </div>
-                                  <!-- END PAGE CONTAINER -->
-                                </div>
