Updating customer list

--- a/project/LaborGuru_SPM_API/trunk/web/index.html
+++ b/project/LaborGuru_SPM_API/trunk/web/index.html
@@ -33,7 +33,7 @@
   <script src="app.js"></script>
   <!-- <script src="app/shared/header.js"></script> -->
   <script src="app/customer/customer-list.js"></script>
-  <script src="service/customer.js"></script>
+  <script src="service/customerService.js"></script>
   <!-- Add New Component JS Above -->
 
   <!-- MESSAGE BOX-->
