--- a/web/index.html
+++ b/web/index.html
@@ -34,6 +34,7 @@
   <!-- <script src="app/shared/header.js"></script> -->
   <script src="app/customer/customer-list.js"></script>
   <script src="service/customerService.js"></script>
+  <script src="app/customer/customer-info.js"></script>
   <!-- Add New Component JS Above -->
 
   <!-- MESSAGE BOX-->
@@ -157,6 +158,18 @@
     </div>
     </div>
 
-
+    <div class="message-box message-box-success animated fadeIn" id="message-box-success" ng-show={{showSuccessAlert}}>
+                <div class="mb-container">
+                    <div class="mb-middle">
+                        <div class="mb-title"><span class="fa fa-check"></span> Success</div>
+                        <div class="mb-content">
+                            <p>{{message}}</p>
+                        </div>
+                        <div class="mb-footer">
+                            <button class="btn btn-default btn-lg pull-right mb-control-close">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
 </body>
 </html>
