--- a/web/index.html
+++ b/web/index.html
@@ -14,29 +14,6 @@
   <!-- Livereload script for development only (stripped during dist build) -->
   <script src="http://localhost:35729/livereload.js" data-concat="false"></script>
 
-  <!-- JS from Bower Components -->
-  <script src="bower_components/less.js/dist/less-1.6.2.js" data-concat="false"></script>
-  <script src="bower_components/jquery/jquery.js"></script>
-  <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-  <script src="bower_components/underscore/underscore.js"></script>
-  <script src="bower_components/moment/moment.js"></script>
-  <script src="bower_components/angular/angular.js"></script>
-  <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-  <script src="bower_components/angular-animate/angular-animate.js"></script>
-  <script src="bower_components/angular-resource/angular-resource.js"></script>
-  <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-  <script src="bower_components/angular-ui-utils/ui-utils.js"></script>
-  <!-- Add New Bower Component JS Above -->
-
-
-  <!-- Main App JS -->
-  <script src="app.js"></script>
-  <!-- <script src="app/shared/header.js"></script> -->
-  <script src="app/customer/customer-list.js"></script>
-  <script src="service/customerService.js"></script>
-  <script src="app/customer/customer-info.js"></script>
-  <!-- Add New Component JS Above -->
-
   <!-- MESSAGE BOX-->
   <div class="message-box animated fadeIn" data-sound="alert" id="mb-signout">
     <div class="mb-container">
@@ -64,12 +41,12 @@
       <!-- END PRELOADS -->
       <!-- START SCRIPTS -->
       <!-- START PLUGINS -->
-      <script type="text/javascript" src="theme/js/plugins/jquery/jquery.min.js"></script>
+      <!-- <script type="text/javascript" src="theme/js/plugins/jquery/jquery.min.js"></script>
       <script type="text/javascript" src="theme/js/plugins/jquery/jquery-ui.min.js"></script>
-      <script type="text/javascript" src="theme/js/plugins/bootstrap/bootstrap.min.js"></script>
+      <script type="text/javascript" src="theme/js/plugins/bootstrap/bootstrap.min.js"></script> -->
       <!-- END PLUGINS -->
       <!-- START THIS PAGE PLUGINS-->
-      <script type='text/javascript' src='theme/js/plugins/icheck/icheck.min.js'></script>
+      <!-- <script type='text/javascript' src='theme/js/plugins/icheck/icheck.min.js'></script>
       <script type="text/javascript" src="theme/js/plugins/mcustomscrollbar/jquery.mCustomScrollbar.min.js"></script>
       <script type="text/javascript" src="theme/js/plugins/scrolltotop/scrolltopcontrol.js"></script>
       <script type="text/javascript" src="theme/js/plugins/morris/raphael-min.js"></script>
@@ -82,15 +59,44 @@
       <script type="text/javascript" src="theme/js/plugins/owl/owl.carousel.min.js"></script>
       <script type="text/javascript" src="theme/js/plugins/moment.min.js"></script>
       <script type="text/javascript" src="theme/js/plugins/daterangepicker/daterangepicker.js"></script>
-      <script type="text/javascript" src="theme/js/plugins/datatables/jquery.dataTables.min.js"></script>
+      <script type="text/javascript" src="theme/js/plugins/datatables/jquery.dataTables.min.js"></script> -->
       <!-- END THIS PAGE PLUGINS-->
       <!-- START TEMPLATE -->
       <!-- <script type="text/javascript" src="theme/js/settings.js"></script> -->
-    <script type="text/javascript" src="theme/js/plugins.js"></script>
-    <script type="text/javascript" src="theme/js/actions.js"></script>
+    <!-- <script type="text/javascript" src="theme/js/plugins.js"></script>
+    <script type="text/javascript" src="theme/js/actions.js"></script> -->
     <!-- <script type="text/javascript" src="theme/js/demo_dashboard.js"></script> -->
     <!-- END TEMPLATE -->
     <!-- END SCRIPTS -->
+
+  <!-- JS from Bower Components -->
+  <script src="bower_components/less.js/dist/less-1.6.2.js" data-concat="false"></script>
+  <script src="bower_components/jquery/jquery.js"></script>
+  <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+  <script src="bower_components/underscore/underscore.js"></script>
+  <script src="bower_components/moment/moment.js"></script>
+  <script src="bower_components/angular/angular.js"></script>
+  <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+  <script src="bower_components/angular-animate/angular-animate.js"></script>
+  <script src="bower_components/angular-resource/angular-resource.js"></script>
+  <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+  <script src="bower_components/angular-ui-utils/ui-utils.js"></script>
+  <script src="bower_components/angular-smart-table/dist/smart-table.min.js"></script>
+  <!-- Add New Bower Component JS Above -->
+
+
+  <!-- Main App JS -->
+  <script src="app.js"></script>
+  <script src="app/shared/header.js"></script>
+  <script src="app/customer/customer-list.js"></script>
+  <script src="service/customerService.js"></script>
+  <script src="app/customer/customer-info.js"></script>
+  <script src="app/store/store-list.js"></script>
+  <script src="service/storeService.js"></script>
+  <script src="app/store/details/show-details.js"></script>
+  <script src="app/store/details/show-operationTime.js"></script>
+  <!-- Add New Component JS Above -->
+
     <!-- START PAGE CONTAINER -->
     <div class="page-container">
 
@@ -117,7 +123,7 @@
             </a>
           </li>
           <li class="xn-openable">
-            <a href="#">
+            <a href="#/store">
               <span class="fa fa-coffee">
               </span>
               <span class="xn-text">Store</span>
