--- a/project/LaborGuru_SPM_API/trunk/web/app/home/home.html
+++ b/project/LaborGuru_SPM_API/trunk/web/app/home/home.html
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <div class="col-md-12" ng-controller="HomeCtrl">
   <script type="text/javascript" src="theme/js/demo_dashboard.js"></script>
   <!-- PAGE CONTENT WRAPPER -->
@@ -481,3 +480,4 @@
                                         <!-- END DASHBOARD CHART -->
                                       </div>
                                       <!-- END PAGE CONTENT WRAPPER -->
+</div>
