--- a/project/LaborGuru_SPM_API/trunk/web/app/customer/customer-list.html
+++ b/project/LaborGuru_SPM_API/trunk/web/app/customer/customer-list.html
@@ -48,3 +48,13 @@
   </div>
 
 </div>
+
+
+
+
+
+<script type="text/javascript">
+  $(function(){
+    $(".datatable").dataTable();
+  })
+</script>
