--- a/project/LaborGuru_SPM_API/trunk/web/app/customer/customer-list.html
+++ b/project/LaborGuru_SPM_API/trunk/web/app/customer/customer-list.html
@@ -14,17 +14,28 @@
                 </ul> -->
             </div>
             <div class="panel-body">
-                <table datatable="" class="table datatable">
+                <table st-table="displayedCollection" st-safe-src="customerList" class="table table-striped" st-sort-ascent="sorting_asc" and st-sort-descent="sorting_desc">
                     <thead>
+                      <tr>
+                        <th>
+                          <input ng-model="itemsByPage" id="items" class="input-sm"  form-control ng-valid ng-dirty ng-valid-number type="number"/>
+                        </th>
+                        <th colspan="3">&nbsp;</th>
+                      </tr>
+                      <tr>
+                        <th colspan="4">
+                             <input st-search="" placeholder="search" class="input-sm form-control" type="text"/>
+                        </th>
+                      </tr>
                         <tr>
-                            <th>ID</th>
-                            <th>Code</th>
-                            <th>Name</th>
+                            <th st-sort="id">ID</th>
+                            <th st-sort="code">Code</th>
+                            <th st-sort="name">Name</th>
                             <th>&nbsp;</th>
                         </tr>
                     </thead>
                     <tbody>
-                       <tr ng-repeat="customer in customerList">
+                       <tr ng-repeat="customer in displayedCollection">
                             <td>{{customer.id}}</td>
                             <td>{{customer.code}}</td>
                             <td>{{customer.name}}</td>
@@ -39,6 +50,13 @@
                             </td>
                         </tr>
                     </tbody>
+                    <tfoot>
+                			<tr>
+                				<td colspan="4" class="text-center">
+                					<div st-pagination="" st-items-by-page="itemsByPage" st-displayed-pages="8"></div>
+                				</td>
+                			</tr>
+        		        </tfoot>
                 </table>
             </div>
         </div>
@@ -48,13 +66,3 @@
   </div>
 
 </div>
-
-
-
-
-
-<script type="text/javascript">
-  $(function(){
-    $(".datatable").dataTable();
-  })
-</script>
