Adding new functionalities

--- a/project/LaborGuru_SPM_API/trunk/web/app/store/details/show-details.html
+++ b/project/LaborGuru_SPM_API/trunk/web/app/store/details/show-details.html
@@ -32,9 +32,7 @@
                 </div>
               <ul>
                 <li>
-                  <p> <a ng-click="showOperationTime(store.id)" href="javascript:void(0)"> Hours of operation
-
-                  </a>
+                  <a ng-click="showOperationTime(store.id)" href="javascript:void(0)"> Hours of operation</a>
                 </li>
                 <li>Daypart definition</li>
                 <li>Position names</li>
